Fix redirecting index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
+<head>
+    <meta http-equiv="refresh" content="1; url='https://sala.melda.info'" />
+</head>
 <title>301 Moved Permanently</title>
 </head><body>
 <h1>Moved Permanently</h1>
-<p>The document has moved <a href="https://sala.melda.info/">here</a>.</p>
+<p>The document has moved <a href="https://sala.melda.info">here</a>.</p>
 </body></html>
